--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,10 +21,12 @@
         </activity>
         <activity
             android:name=".UserActitvity"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:parentActivityName=".MainActivity"/>
         <activity
-            android:name=".NotificationList"
-            android:label="@string/title_activity_notification_list"
+            android:name=".Notifications"
+            android:label="@string/title_activity_notifications"
+            android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
