--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:label="@string/app_name"
             android:parentActivityName=".MainActivity"/>
         <activity
-            android:name=".Notifications"
+            android:name=".NotificationFragment"
             android:label="@string/title_activity_notifications"
             android:parentActivityName=".MainActivity"></activity>
     </application>
